added start of homepage and navbar elements

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,35 @@
     <title>How To Think About Nothing</title>
 </head>
 
-<body><h1>Netlify Deployment Test</h1></body>
+<body>
+
+    <div class="nav">
+        <ul class="nav__content">
+            <li>About</li>
+            <li>Instructions</li>
+            <li>Schedule</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+
+    <div class="home">
+
+        <video class="home__bg-video abs-center" autoplay muted loop>
+            <source src="/img/Wave-Sitting.mp4" type="video/mp4">
+            Your browser is not supported!
+        </video>
+
+        <div class="home__content">
+            <h1 class="home__primary-header">How to Think About Nothing</h1>
+        </div>
+
+    </div>
+
+</body>
+
+
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="index.js"></script>
