added google fonts, gallery nav button, homepage animations, and "nothing" dictionary definition

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <title>How To Think About Nothing</title>
 </head>
 
@@ -15,23 +16,67 @@
             <li>About</li>
             <li>Instructions</li>
             <li>Schedule</li>
+            <li>Gallery</li>
             <li>Contact</li>
         </ul>
     </div>
 
     <div class="home">
 
-        <video class="home__bg-video abs-center" autoplay muted loop>
-            <source src="/img/Wave-Sitting.mp4" type="video/mp4">
-            Your browser is not supported!
-        </video>
-
-        <div class="home__content">
-            <h1 class="home__primary-header">How to Think About Nothing</h1>
+        <div class="home__bg-video-parent">
+            <video class="home__bg-video abs-center" autoplay muted loop>
+                <source src="/img/Wave-Sitting.mp4" type="video/mp4">
+                Your browser is not supported!
+            </video>
         </div>
 
+        <div class="home__initial-content">
+            <img class="home__logo" src="/img/yoga.svg" />
+            <h1 class="home__primary-header">How to Think About
+
+                <div class="home__nothing-parent">
+                    <div class="underliner"></div>
+                    <span>N</span>
+                    <span>o</span>
+                    <span>t</span>
+                    <span>h</span>
+                    <span>i</span>
+                    <span>n</span>
+                    <span>g</span>
+                    <div class="underliner"></div>
+                </div>
+            </h1>
+        </div>
+
+
+        <div class="home__definition">
+            <div class="home__def-wrapper">
+
+                <h2 class="home__def-heading">noth·ing</h2>
+                <span class="home__def-pronounce">/`nəTHiNG/</span>
+
+                <div>
+                    <h4 class="home__def-type u-ital">pronoun</h4>
+                    <ul class="home__def-ul">
+                        <li> not anything; no single thing.</li>
+                        <li class="home__def-sentence">"I said nothing"</li>
+                        <li class="home__def-synonyms">
+                            <span class="u-ital">synonyms: </span>
+                            not a thing, not anything, nil, zero, naught/nought;
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <div class="about">
+
+        <div class="about__content">
+            <h2 class="about__h2">Further Sections will be added down here</h2>
+        </div>
+        
+    </div>
 </body>
 
 
