moved img folder to public to allow deployment to netlify + changed paths to match new location

--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
 
         <div class="home__bg-video-parent">
             <video class="home__bg-video abs-center" autoplay muted loop>
-                <source src="/img/Wave-Sitting.mp4" type="video/mp4">
+                <source src="/public/img/Wave-Sitting.mp4" type="video/mp4">
                 Your browser is not supported!
             </video>
         </div>
 
         <div class="home__initial-content">
-            <img class="home__logo" src="/img/yoga.svg" />
+            <img class="home__logo" src="/public/img/yoga.svg" />
             <h1 class="home__primary-header">How to Think About
 
                 <div class="home__nothing-parent">
