--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-
     <link href="https://fonts.googleapis.com/css?family=Arimo|Krub" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
@@ -18,13 +16,15 @@
 <body>
 
     <div class="nav">
-        <ul class="nav__content">
-            <li>About</li>
-            <li>Instructions</li>
-            <li>Schedule</li>
-            <li>Gallery</li>
-            <li>Contact</li>
-        </ul>
+        <div class="nav__content">
+            <ul>
+                <li id="about">About</li>
+                <li id="instructions-intro">Instructions</li>
+                <li id="gallery">Gallery</li>
+                <li id="schedule">Schedule</li>
+                <li id="contact">Contact</li>
+            </ul>
+        </div>
     </div>
 
     <div class="intro">
@@ -45,9 +45,10 @@
         <button class="instructions-intro__button">Begin</button>
     </div>
 
+
     <!-- <div class="about">
 
-        <h2 class="about__header">Placeholder Instructions Intro Section</h2>
+        <h2 class="about__header">About</h2>
         <div class="about__bio-mugshot-parent">
             <div class="about__bio">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis ab neque rem
                 aspernatur fugiat magni porro maxime dolorem nemo inventore, nostrum velit ratione laudantium corrupti?
@@ -59,6 +60,7 @@
             </div>
         </div>
     </div> -->
+
 
     <div class="gallery">
 
@@ -91,8 +93,7 @@
 
     <div class="contact-schedule">
 
-        <div class="contact">
-
+        <div id="contact" class="contact">
             <h2 class="contact__header">Contact Info</h2>
             <div class="contact__info-box">Phone: XXX-XXX-XXXX</div>
             <div class="contact__info-box">Email: example@gmail.com</div>
@@ -100,11 +101,9 @@
                 <i class="contact__icon fab fa-facebook"></i>
                 <i class="contact__icon fab fa-twitter-square"></i>
             </div>
-
-
         </div>
 
-        <div class="schedule">
+        <div id="schedule" class="schedule">
 
             <div class="schedule__content">
                 <h2 class="schedule__header">Class Schedule</h2>
@@ -118,8 +117,11 @@
         </div>
     </div>
 
-
-
+    <div class="footer">
+        <img src="./img/yoga.svg" alt="Site logo - yoga icon" id="intro" class="footer__logo" />
+        <div class="footer__copyright"> &copy; 2018 John Feddersen</div>
+        <div class="footer__site-name">HowToThinkAboutNothing.com</div>
+    </div>
 
     <!-- <div class="definition">
         <div class="definition__wrapper">
@@ -141,16 +143,9 @@
         </div>
     </div> -->
 
-
-
-
-
-
-
-
 </body>
-<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="index.js"></script>
 
