--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,12 @@
     </div>
 
     <div class="intro">
-        <div class="intro__content">
-            <h2 class="intro__heading">How to <div class="u-underline">Think</div> About <div class="u-underline">
-                    Nothing </div>
-            </h2>
+        <div class="intro__background">
+            <div class="intro__content">
+                <h2 class="intro__heading">How to <div class="u-underline">Think</div> About <div class="u-underline">
+                        Nothing </div>
+                </h2>
+            </div>
         </div>
     </div>
 
@@ -42,7 +44,7 @@
             itaque, deserunt id, ipsum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis
             atque assumenda accusamus quasi aliquid incidunt. Nemo culpa veritatis eveniet molestias accusamus
             reiciendis ducimus at quod reprehenderit, animi odio quae!</div>
-        <button class="instructions-intro__button">Begin</button>
+        <a href="./pages/instructions.html" class="instructions-intro__button">Begin</a>
     </div>
 
 
