setup starting animations and basic functionality of steps page

--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -1,32 +1,111 @@
-<div class="instructions">
+<!DOCTYPE html>
+<html>
 
-    <div class="instructions__bg-video-parent">
-        <video class="instructions__bg-video abs-center" autoplay muted loop>
-            <source src="./img/Wave-Sitting.mp4" type="video/mp4">
-            Your browser is not supported!
-        </video>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../index.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="instructions.js"></script>
+
+
+</head>
+
+<body>
+    <div class="steps-intro">
+
+        <!-- <video class="steps-intro__bg-video" autoplay muted loop>
+                <source src="../img/Wave-Sitting.mp4" type="video/mp4">
+                Your browser is not supported!
+            </video> -->
+
+        <div class="steps-intro__initial-content">
+            <img class="steps-intro__logo" src="../img/yoga.svg" />
+
+            <h1 class="steps-intro__primary-header">How to Think About
+
+                <div class="steps-intro__nothing-parent">
+
+                    <div class="underliner"></div>
+                    <span>N</span>
+                    <span>o</span>
+                    <span>t</span>
+                    <span>h</span>
+                    <span>i</span>
+                    <span>n</span>
+                    <span>g</span>
+                    <div class="underliner"></div>
+
+                </div>
+            </h1>
+        </div>
     </div>
 
-    <div class="instructions__initial-content">
-        <img class="instructions__logo" src="./img/yoga.svg" />
+    <div class="step-parent">
 
-        <h1 class="instructions__primary-header">How to Think About
+        <div class="step step-one">
 
-            <div class="instructions__nothing-parent">
-                
-                <div class="underliner"></div>
-                <span>N</span>
-                <span>o</span>
-                <span>t</span>
-                <span>h</span>
-                <span>i</span>
-                <span>n</span>
-                <span>g</span>
-                <div class="underliner"></div>
+            <h2 class="step__header">Step One</h2>
 
+            <div class="step__content">
+                content
             </div>
 
-        </h1>
+        </div>
 
-    </div>
+        <div class="step step-two">
+
+
+            <h2 class="step__header">Step Two</h2>
+
+            <div class="step__content">
+                content
+            </div>
+
+
+        </div>
+        <div class="step step-three">
+
+
+            <h2 class="step__header">Step Three</h2>
+
+            <div class="step__content">
+                content
+            </div>
+
+
+        </div>
+        <div class="step step-four">
+
+
+            <h2 class="step__header">Step Four</h2>
+
+            <div class="step__content">
+                content
+            </div>
+
+
+        </div>
+        <div class="step step-five">
+
+
+            <h2 class="step__header">Step Five</h2>
+
+            <div class="step__content">
+                content
+            </div>
+
+        </div>
+<div class="step__btn-parent">
+    <button class="prev">Prev</button>
+    <button class="next">Next</button>
 </div>
+    </div>
+ 
+
+
+</body>
+
+</html>
