--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -14,12 +14,31 @@
 </head>
 
 <body>
+    <div class="loading">
+
+
+        <video class="loading__bg-video" autoplay muted loop>
+            <source src="../img/The-Slow-Dock.mp4" type="video/mp4">
+            Your browser is not supported!
+        </video>
+
+        <div class="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
+
+        </div>
+
+        <h3 class="loading__text">Loading</h3>
+    </div>
+
+
+
     <div class="steps-intro">
 
-        <!-- <video class="steps-intro__bg-video" autoplay muted loop>
-                <source src="../img/Wave-Sitting.mp4" type="video/mp4">
-                Your browser is not supported!
-            </video> -->
+
 
         <div class="steps-intro__initial-content">
             <img class="steps-intro__logo" src="../img/yoga.svg" />
@@ -90,20 +109,16 @@
         </div>
         <div class="step step-five">
 
-
             <h2 class="step__header">Step Five</h2>
-
-            <div class="step__content">
-                content
-            </div>
+            <div class="step__content"> content </div>
 
         </div>
-<div class="step__btn-parent">
-    <button class="prev">Prev</button>
-    <button class="next">Next</button>
-</div>
+        <div class="step__btn-parent">
+            <button class="prev">Prev</button>
+            <button class="next">Next</button>
+        </div>
     </div>
- 
+
 
 
 </body>
