gave video element an id so its playback rate can be changed through JS

--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -17,8 +17,8 @@
     <div class="loading">
 
 
-        <video class="loading__bg-video" autoplay muted loop>
-            <source src="../img/The-Slow-Dock.mp4" type="video/mp4">
+        <video id="videoEl" class="loading__bg-video" autoplay muted loop>
+            <source  src="../img/The-Slow-Dock.mp4" type="video/mp4">
             Your browser is not supported!
         </video>
 
@@ -69,8 +69,13 @@
             <h2 class="step__header">Step One</h2>
 
             <div class="step__content">
-                content
+
+                <div class="step__btn-parent">
+                    <button class="prev">Prev</button>
+                    <button class="next">Next</button>
+                </div>
             </div>
+
 
         </div>
 
@@ -80,8 +85,13 @@
             <h2 class="step__header">Step Two</h2>
 
             <div class="step__content">
-                content
+                <div class="step__btn-parent">
+                    <button class="prev">Prev</button>
+                    <button class="next">Next</button>
+                </div>
+
             </div>
+
 
 
         </div>
@@ -91,8 +101,13 @@
             <h2 class="step__header">Step Three</h2>
 
             <div class="step__content">
-                content
+                <div class="step__btn-parent">
+                    <button class="prev">Prev</button>
+                    <button class="next">Next</button>
+                </div>
             </div>
+
+
 
 
         </div>
@@ -102,24 +117,27 @@
             <h2 class="step__header">Step Four</h2>
 
             <div class="step__content">
-                content
+                <div class="step__btn-parent">
+                    <button class="prev">Prev</button>
+                    <button class="next">Next</button>
+                </div>
             </div>
+
+
 
 
         </div>
         <div class="step step-five">
 
             <h2 class="step__header">Step Five</h2>
-            <div class="step__content"> content </div>
-
-        </div>
-        <div class="step__btn-parent">
-            <button class="prev">Prev</button>
-            <button class="next">Next</button>
+            <div class="step__content">
+                <div class="step__btn-parent">
+                    <button class="prev">Prev</button>
+                    <button class="next">Next</button>
+                </div>
+            </div>
         </div>
     </div>
-
-
 
 </body>
 
