changed footer icon color to whitesmoke

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="footer">
-        <img src="./img/yoga.svg" alt="Site logo - yoga icon" id="intro" class="footer__logo" />
+        <img src="./img/yoga.white.svg" alt="Site logo - yoga icon" id="intro" class="footer__logo" />
         <div class="footer__copyright"> &copy; 2018 John Feddersen</div>
         <div class="footer__site-name">HowToThinkAboutNothing.com</div>
     </div>
