changed title to "how to think of nothing"  and added blur to background images

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
 
-    <title>How To Think About Nothing</title>
+    <title>How To Think of Nothing</title>
 </head>
 
 <body>
@@ -28,17 +28,19 @@
     </div>
 
     <div class="intro">
-        <div class="intro__background">
+        <div class="intro__background"> 
+            <div class="intro__darken-cover"></div>      
+        </div>
+
             <div class="intro__content">
-                <h2 class="intro__heading">How to <div class="u-underline">Think</div> About <div class="u-underline">
+                <h2 class="intro__heading">How to <div class="u-underline">Think</div> of <div class="u-underline">
                         Nothing </div>
                 </h2>
             </div>
-        </div>
     </div>
 
     <div class="instructions-intro">
-        <h2 class="instructions-intro__header">Thinking About Nothing</h2>
+        <h2 class="instructions-intro__header">Thinking of Nothing</h2>
         <div class="instructions-intro__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt fugiat
             molestiae corporis necessitatibus! Illum dolorem at iste cum fuga, deleniti vitae quae quam dolores aliquid
             itaque, deserunt id, ipsum quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi debitis
@@ -65,6 +67,8 @@
 
 
     <div class="gallery">
+
+        <div class="gallery__bg"></div>
 
         <div class="main-carousel abs-center" data-flickity='{ "cellAlign": "left", "contain": true }'>
 
@@ -122,7 +126,7 @@
     <div class="footer">
         <img src="./img/yoga.white.svg" alt="Site logo - yoga icon" id="intro" class="footer__logo" />
         <div class="footer__copyright"> &copy; 2018 John Feddersen</div>
-        <div class="footer__site-name">HowToThinkAboutNothing.com</div>
+        <div class="footer__site-name">HowToThinkofNothing.com</div>
     </div>
 
     <!-- <div class="definition">
