changed site name to how to think of nothing

--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -43,7 +43,7 @@
         <div class="steps-intro__initial-content">
             <img class="steps-intro__logo" src="../img/yoga.svg" />
 
-            <h1 class="steps-intro__primary-header">How to Think About
+            <h1 class="steps-intro__primary-header">How to Think of
 
                 <div class="steps-intro__nothing-parent">
 
