--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Krub" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <title>How To Think of Nothing</title>
 </head>
@@ -18,7 +17,7 @@
     <div class="nav">
         <div class="nav__content">
             <ul>
-                <li id="about">About</li>
+                <!-- <li id="about">About</li> -->
                 <li id="instructions-intro">Instructions</li>
                 <li id="gallery">Gallery</li>
                 <li id="schedule">Schedule</li>
