fadded letters in page heading and decreased height if intro section

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Krub" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
 
     <title>How To Think of Nothing</title>
 </head>
@@ -27,15 +28,22 @@
     </div>
 
     <div class="intro">
-        <div class="intro__background"> 
-            <div class="intro__darken-cover"></div>      
+        <div class="intro__background">
+            <div class="intro__darken-cover"></div>
         </div>
 
-            <div class="intro__content">
-                <h2 class="intro__heading">How to <div class="u-underline">Think</div> of <div class="u-underline">
-                        Nothing </div>
-                </h2>
-            </div>
+        <div class="intro__content">
+            <h2 class="intro__heading">
+                <span class="faded-text">How to</span>
+                <div class="u-underline">
+                Think
+                </div> 
+                <span class="faded-text"> of </span>
+                <div class="u-underline">
+                Nothing
+                </div>
+            </h2>
+        </div>
     </div>
 
     <div class="instructions-intro">
