to fix broken home btn deployment link - changed home btn path to relative and reduced loading timer for testing

--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -59,7 +59,7 @@
 
     <div class="step-parent">
 
-        <a href="/public/index.html" class="home-btn">
+        <a href="../index.html" class="home-btn">
             <i class="home-btn__icon fas fa-home"></i>
         </a>
 
