added fade-in-out animation to homepage heading

--- a/public/index.html
+++ b/public/index.html
@@ -36,11 +36,20 @@
             <h2 class="intro__heading">
                 <span class="faded-text">How to</span>
                 <div class="u-underline">
-                Think
-                </div> 
+                    Think
+                </div>
                 <span class="faded-text"> of </span>
                 <div class="u-underline">
-                Nothing
+                    <div class="intro__nothing-parent">
+                        <span>N</span>
+                        <span>o</span>
+                        <span>t</span>
+                        <span>h</span>
+                        <span>i</span>
+                        <span>n</span>
+                        <span>g</span>
+                    </div>
+
                 </div>
             </h2>
         </div>
