added id to video element to change play back speed

--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -79,11 +79,8 @@
                     Slow
                 </button>
 
-                <div class="step-one__icon-parent">
-                    <i class="step-one__icon fas fa-tachometer-alt"></i>
-                </div>
                 <div class="step-one__video-parent">
-                    <video autoplay muted loop class="step-one__video"></video>
+                    <video id="slowFastVid" autoplay muted loop class="step-one__video"></video>
                 </div>
             </div>
 
@@ -94,10 +91,11 @@
                 minima sint voluptatem minus perferendis, sapiente animi eius harum delectus eum nam sunt rem odit
                 obcaecati!
 
-                <div class="step__btn-parent">
+                <!-- <div class="step__btn-parent">
                     <button class="prev">Prev</button>
                     <button class="next">Next</button>
-                </div>
+                </div> -->
+
             </div>
         </div>
 
