changed yoga svg to white fill

--- a/public/pages/instructions.html
+++ b/public/pages/instructions.html
@@ -36,7 +36,7 @@
     <div class="steps-intro">
 
         <div class="steps-intro__initial-content">
-            <img class="steps-intro__logo" src="../img/yoga.svg" />
+            <img class="steps-intro__logo" src="../img/yoga.white.svg" />
 
             <h1 class="steps-intro__primary-header">How to Think of
 
