--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,17 @@
 
         <div class="intro__content">
             <h2 class="intro__heading">
+
                 <span class="faded-text">How to</span>
                 <div class="u-underline">
+                    <div class="underliner"></div>
                     Think
+                    <div class="underliner"></div>
                 </div>
                 <span class="faded-text"> of </span>
                 <div class="u-underline">
+                    <div class="underliner"></div>
+
                     <div class="intro__nothing-parent">
                         <span>N</span>
                         <span>o</span>
@@ -49,7 +54,8 @@
                         <span>n</span>
                         <span>g</span>
                     </div>
-
+                    
+                    <div class="underliner"></div>
                 </div>
             </h2>
         </div>
