removed galleryBG div and removed absolute center class from gallery carousel

--- a/public/index.html
+++ b/public/index.html
@@ -77,9 +77,7 @@
 
     <div class="gallery">
 
-        <div class="gallery__bg"></div>
-
-        <div class="main-carousel abs-center" data-flickity='{ "cellAlign": "left", "contain": true }'>
+        <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
 
             <div class="carousel-cell">
                 <img class="carousel-image" src="https://images.unsplash.com/photo-1532798442725-41036acc7489?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2146ef1475a7c37418d208106efd19e9&auto=format&fit=crop&w=1267&q=80" />
